--- a/index.html
+++ b/index.html
@@ -31,10 +31,19 @@
         .card-body {
             display: flex;
             flex-direction: column;
+            padding-bottom: 0;
         }
 
         .btn-wrapper {
             margin-top: auto;
+            margin-left: -1.25rem;
+            margin-right: -1.25rem;
+        }
+
+        .btn-wrapper .btn {
+            border-radius: 0 0 0.25rem 0.25rem;
+            padding: 0.75rem 1.25rem;
+            width: 100%;
         }
     </style>
 </head>
@@ -52,64 +61,64 @@
     <main class="container mt-5">
         <div class="row">
             <div class="col-lg-3 col-md-6 mb-4">
-                <a href="self-development/unveiling.html" class="card-link">
-                    <article class="card h-100">
+                <article class="card h-100">
+                    <a href="self-development/unveiling.html" class="card-link">
                         <img src="assets/images/unveiling.jpg" class="card-img-top" alt="Unveiling The Self">
                         <div class="card-body">
                             <h2 class="card-title h5">Unveiling The Self</h2>
                             <p class="card-text">Enhance your knowledge by delving into these articles on various
                                 self-development topics.</p>
-                            <div class="btn-wrapper">
-                                <a href="self-development/unveiling.html" class="btn btn-primary">Read More</a>
-                            </div>
                         </div>
-                    </article>
-                </a>
+                    </a>
+                    <div class="btn-wrapper">
+                        <a href="self-development/unveiling.html" class="btn btn-primary">Read More</a>
+                    </div>
+                </article>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
-                <a href="technology/technology.html" class="card-link">
-                    <article class="card h-100">
+                <article class="card h-100">
+                    <a href="technology/technology.html" class="card-link">
                         <img src="assets/images/tech.jpg" class="card-img-top" alt="Technology">
                         <div class="card-body">
                             <h2 class="card-title h5">Technology</h2>
                             <p class="card-text">Explore the unseen mechanics behind everyday technology and some fun
                                 with code.</p>
-                            <div class="btn-wrapper">
-                                <a href="technology/technology.html" class="btn btn-primary">Discover More</a>
-                            </div>
                         </div>
-                    </article>
-                </a>
+                    </a>
+                    <div class="btn-wrapper">
+                        <a href="technology/technology.html" class="btn btn-primary">Discover More</a>
+                    </div>
+                </article>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
-                <a href="cloud computing/cloud_computing.html" class="card-link">
-                    <article class="card h-100">
+                <article class="card h-100">
+                    <a href="cloud computing/cloud_computing.html" class="card-link">
                         <img src="assets/images/cloudComputing.jpg" class="card-img-top" alt="Cloud Computing">
                         <div class="card-body">
                             <h2 class="card-title h5">Cloud Computing</h2>
                             <p class="card-text">Find guides on using cloud resources and projects to enhance your cloud
                                 learning journey.</p>
-                            <div class="btn-wrapper">
-                                <a href="cloud computing/cloud_computing.html" class="btn btn-primary">Learn More</a>
-                            </div>
                         </div>
-                    </article>
-                </a>
+                    </a>
+                    <div class="btn-wrapper">
+                        <a href="cloud computing/cloud_computing.html" class="btn btn-primary">Learn More</a>
+                    </div>
+                </article>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
-                <a href="linux/linux_blogs.html" class="card-link">
-                    <article class="card h-100">
+                <article class="card h-100">
+                    <a href="linux/linux_blogs.html" class="card-link">
                         <img src="/assets/images/linux.jpg" alt="Linux" class="card-img-top">
                         <div class="card-body">
                             <h2 class="card-title h5">Linux</h2>
                             <p class="card-text">Dive into the world of Linux with tutorials, tips, and in-depth
                                 articles.</p>
-                            <div class="btn-wrapper">
-                                <a href="linux/linux_blogs.html" class="btn btn-primary">Explore Linux</a>
-                            </div>
                         </div>
-                    </article>
-                </a>
+                    </a>
+                    <div class="btn-wrapper">
+                        <a href="linux/linux_blogs.html" class="btn btn-primary">Explore Linux</a>
+                    </div>
+                </article>
             </div>
         </div>
     </main>
