--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
                 <article class="card h-100">
-                    <a href="linux/linux.html" class="card-link">
+                    <a href="linux_/linux.html" class="card-link">
                         <img src="/assets/images/linux.jpg" alt="Linux" class="card-img-top">
                         <div class="card-body">
                             <h2 class="card-title h5">Linux</h2>
