--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         </div>
                     </a>
                     <div class="btn-wrapper">
-                        <a href="linux/linux_blogs.html" class="btn btn-primary">Explore Linux</a>
+                        <a href="linux_/linux.html" class="btn btn-primary">Explore Linux</a>
                     </div>
                 </article>
             </div>
