--- a/linux_/linux.html
+++ b/linux_/linux.html
@@ -24,7 +24,7 @@
                 <a href="https://medium.com/@vt3630/the-paradox-of-success-927c67efe60e" target=_blank
                     class="card-link">
                     <div class="card custom-card">
-                        <img src="assets/images/paradox.jpg" class="card-img-top" alt="Running Arbitrary Code">
+                        <img src="assets/partition.jpg" class="card-img-top" alt="Running Arbitrary Code">
                         <div class="card-body">
                             <h5 class="card-title">Create a partition out of your disk in Linux.</h5>
                             <p class="card-text">I have an 20GB disk now, I am going to demonstrate how we can partition this disk and create an another disk.....</p>
@@ -37,7 +37,7 @@
                 <a href="https://medium.com/@vt3630/overcoming-problems-in-relationships-friends-partners-02ee5ad8bf75"
                     target=_blank class="card-link">
                     <div class="card custom-card">
-                        <img src="assets/images/heartbroke.png" class="card-img-top" alt="Running Arbitrary Code">
+                        <img src="assets/quota_user.jpg" class="card-img-top" alt="Running Arbitrary Code">
                         <div class="card-body">
                             <h5 class="card-title">Leveraging Quota for User Management in Linux</h5>
                             <p class="card-text">I’ve launched a VM with 20GB of storage and will demonstrate. First, I’ll create a separate partition for users to
