--- a/linux_/linux.html
+++ b/linux_/linux.html
@@ -39,7 +39,7 @@
                     <div class="card custom-card">
                         <img src="assets/quota_user.jpg" class="card-img-top" alt="Running Arbitrary Code">
                         <div class="card-body">
-                            <h5 class="card-title">Leveraging Quota for User Management in Linux</h5>
+                            <h5 class="card-title">Activate Quota for User Management in Linux</h5>
                             <p class="card-text">I’ve launched a VM with 20GB of storage and will demonstrate. First, I’ll create a separate partition for users to
                             isolate them from the root partition. Then....</p>
                         </div>
