--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container">
             <div class="text-center">
                 <h1 class="display-3">Insights</h1>
-                <p class="lead">Explore the latest articles and updates from Vishal Tyagi</p>
+                <p class="lead">Explore the latest articles and updates</p>
             </div>
         </div>
     </header>
@@ -128,7 +128,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center">
                     <a href="https://linkedin.com/in/vishal0210" target="_blank" rel="noopener noreferrer">
-                        Vishal Tyagi
+                        linkedIn | Vishal Tyagi
                     </a>
                 </div>
             </div>
