--- a/linux_/linux.html
+++ b/linux_/linux.html
@@ -46,6 +46,19 @@
                     </div>
                 </a>
             </div>
+            <div class="col-md-4">
+                <a href="https://medium.com/@vt3630/activate-quota-for-group-management-in-linux-bcfe1bd34700"
+                    target=_blank class="card-link">
+                    <div class="card custom-card">
+                        <img src="assets/Leonardo_Phoenix_A_realistic_digital_illustration_depicting_a_0.jpg" class="card-img-top" alt="Running Arbitrary Code">
+                        <div class="card-body">
+                            <h5 class="card-title">Activate Quota for Group Management in Linux</h5>
+                            <p class="card-text">I’ve launched a VM with 20GB of storage and will demonstrate. First, I’ll create a separate partition for users to
+                            isolate them from the root partition. Then....</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
